--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "preact": "^10.16.0",
-    "react-hook-form": "^7.45.4"
+    "react-hook-form": "^7.45.4",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
